--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
-# RewriteEngine On
-# RewriteCond %{HTTPS} !=on
-# RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301,NE] 
+RewriteEngine On
+RewriteCond %{HTTPS} !=on
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301,NE] 
 
 # BEGIN WordPress
 # التعليمات (الأسطر) بين "BEGIN WordPress" و "END WordPress"
